2008-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs: Log an error region instead of
	a line/col location when possible.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs: Add overloads for logging with
	more accurate locations.

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove unused code.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add a Value property to XDocType.

	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs: Copture the doctype
	string when in tree mode.

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Copture doctype
	from the ParsedDocument if it's an XmlParsedDocument. Add utility
	GetBufferText method.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Avoid possible NRE in
	ToUpper/ToLower.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Updated.

	* MonoDevelop.Xml.StateEngine/XmlParsedDocument.cs: Moved
	MoonlightParsedDocument to XmlParsedDocument in the Xml addin.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add ToUpper/ToLower methods on
	XName.

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Fixed bug that
	popped unmatched opening nodes when not in tree mode. Fixes exception
	in path bar when closing tags outnumber opening tags.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix build.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Show code
	templates for forced completion in free space. Fix accidental leak of
	attribute name triggering into free space.

2008-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track fix in text